# end

./: CHANGELOG.md  EXAMPLE.md  EwwNotificationDaemon.cabal  LICENSE  README.md  stack.yaml
app/: Config.hs  Daemon.hs  Main.hs  State.hs  XWindow.hs
app/Util/: Builders.hs  CliParsers.hs  Constants.hs  DbusNotify.hs  Helpers.hs  ImageConversion.hs
example/: README.md
example/end/: config.toml
example/eww/: colors.scss  eww.scss  eww.yuck
