cabal-version:      3.0
name:               EwwNotificationDaemon
version:            0.1.0.0
synopsis:           Linux Notification Daemon using Eww Widgets

homepage:

license:            MIT
license-file:       LICENSE
author:             lucalabs-de
maintainer:         gspitzer@lucalabs.de

category:           System
extra-source-files: CHANGELOG.md

executable EwwNotificationDaemon
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: State, Config, Util.Builders

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base ^>=4.16.4.0,
      dbus ^>=1.2.29,
      text ^>=1.2.5.0,
      process ^>=1.6.17.0,
      mtl ^>=2.2.2,
      containers ^>=0.6.5.1 
    hs-source-dirs:   app
    default-language: Haskell2010
