cabal-version:      3.0
name:               EwwNotificationDaemon
version:            1.1.0
synopsis:           Linux Notification Daemon using Eww Widgets

homepage:

license:            MIT
license-file:       LICENSE
author:             lucalabs-de
maintainer:         gspitzer@lucalabs.de

category:           System
extra-source-files: CHANGELOG.md

executable end
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: 
      Daemon,
      State,
      Config,
      XWindow,
      Util.Builders,
      Util.Helpers,
      Util.DbusNotify,
      Util.Constants,
      Util.CliParsers,
      Paths_EwwNotificationDaemon

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base,
      dbus,
      X11,
      text,
      process,
      mtl,
      containers,
      extensible-exceptions,
      bytestring,
      atomic-modify,
      network,
      optparse-applicative,
      toml-parser,
      directory,
      filepath,
      time
    hs-source-dirs:   app
    default-language: Haskell2010
